# entt_ext

./: ENTITY_MAPPING_USAGE.md  LICENSE  README.md  meson.build  run_tests.sh
examples/: deferred_operations_example.cpp
include/entt_ext/: component_observer.hpp  continuous_loader_with_mapping.hpp  core.hpp  deferred_operations.hpp  ecs.hpp  ecs.ipp  ecs_fwd.hpp  ecs_sync.hpp  entity_mapping.hpp  hierarchy_wrapper.hpp  index_map.hpp  index_set.hpp  move_only_function.hpp  nodes.hpp  return_type.hpp  settings.hpp  sync_client.hpp  sync_common.hpp  sync_server.hpp  sync_usage_example.hpp  system.hpp  type_name.hpp
src/: deferred_operations.cpp  ecs.cpp
subprojects/: cereal.wrap
subprojects/packagefiles/: cereal.patch
test/: README.md  meson.build  test_components.hpp  test_ecs_basic.cpp  test_sync_basic.cpp  test_sync_integration.cpp  test_sync_loop_prevention.cpp  test_sync_notifications.cpp
